create home page

--- a/spring-project/pom.xml
+++ b/spring-project/pom.xml
@@ -41,6 +41,16 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-jasper -->
+    <dependency>
+        <groupId>org.apache.tomcat.embed</groupId>
+        <artifactId>tomcat-embed-jasper</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>jstl</artifactId>
+    </dependency>
+
 
 	<build>
 		<plugins>
